<resources>
    <string name="app_name">MoneyBot Virtual Wallet</string>

    // general purpose strings
    <string name="cancel">Cancel</string>

    // navigation strings
    <string name="welcome_Back">Welcome Back</string>
    <string name="home">Home</string>
    <string name="move_Money">Move Money</string>
    <string name="transfer_Money">Transfer Money</string>
    <string name="add_Money">Add Money</string>
    <string name="friends">Friends</string>
    <string name="moneybot_Friends">Money Bot Friends</string>
    <string name="settings">Settings</string>
    <string name="nfc_Pay">NFC Pay</string>
    <string name="nfc_Payment">NFC Payment</string>

    // login strings
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="account_Login">Account Login</string>
    <string name="create_Account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>>
    <string name="email">Email</string>
    <string name="phone_Number">Phone Number</string>
    <string name="failed_Login">Incorrect username/password</string>

    // records strings
    <string name="load_More">Load More</string>
    <string name="edit_user_info">Edit User Information</string>
    <string name="update">Update</string>

    // money strings
    <string name="amount">Amount</string>
    <string name="recipient">Recipient</string>
    <string name="from">From</string>
    <string name="start_NFC">Start NFC Payment</string>

    // bank string
    <string name="add_Bank">Add Bank</string>
    <string name="bank_Name">Bank Name</string>
    <string name="cardholder_Name">Cardholder Name</string>
    <string name="routing_Number">Routing Number</string>
    <string name="account_Number">Account Number</string>

    // test data for recycler view on home screen
    // 10 items total for scrolling testing
    <string-array name="test_home_items">
        <item>McDonald's #1234</item>
        <item>Sonic #3300</item>
        <item>Bill Pay ACH</item>
        <item>Netflix</item>
        <item>Murphy's Gas Station</item>
        <item>Cinemark #4522</item>
        <item>Taco Bell #1110</item>
        <item>Shoe Dept #449</item>
        <item>Capital One Autopay</item>
        <item>Bank Deposit</item>
    </string-array>

    // corresponding prices for above items

    <string-array name="test_home_prices">
        <item>12.23</item>
        <item>7.56</item>
        <item>98.12</item>
        <item>22.56</item>
        <item>45.12</item>
        <item>34.12</item>
        <item>12.56</item>
        <item>89.34</item>
        <item>223.00</item>
        <item>-908.12</item> // use - to indicate cash inflow
    </string-array>>

</resources>