<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08313a"
    tools:context=".MainHome">

    <View
        android:id="@+id/dec_TitleBck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="26dp"
        android:background="#f1f1e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dec_NavBck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="26dp"
        android:background="#d37b31"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/dec_Details"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="48dp"
        android:background="@color/theme_Beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dec_TitleBck" />

    <TextView
        android:id="@+id/dec_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_Money"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dec_TitleBck"
        app:layout_constraintEnd_toEndOf="@+id/dec_TitleBck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dec_TitleBck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/recipient"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dec_Details" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/navbtn_Home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#a5cbd7"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/home"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/dec_TitleBck"
        app:layout_constraintEnd_toEndOf="@+id/dec_TitleBck"
        app:layout_constraintTop_toTopOf="@+id/dec_TitleBck" />

    <Button
        android:id="@+id/navbtn_MoveMoney"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#7DA5AF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/move_Money"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navbtn_AddMoney" />

    <Button
        android:id="@+id/navbtn_AddMoney"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#a5cbd7"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/add_Money"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navbtn_Friends" />

    <Button
        android:id="@+id/navbtn_Friends"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#a5cbd7"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/friends"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/navbtn_Pay"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#a5cbd7"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/nfc_Pay"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navbtn_Friends" />

    <Button
        android:id="@+id/navbtn_Settings"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#a5cbd7"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navbtn_Pay" />

    <Button
        android:id="@+id/btn_Transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#239728"
        android:text="@string/transfer_Money"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbx_Amount"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtbx_Amount"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dec_Details"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/drpdwn_Recipient"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>