<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_Teal"
    tools:context=".MainHome">

    <View
        android:id="@+id/dec_Card"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginTop="48dp"
        android:background="#213C30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dec_TitleBck" />

    <View
        android:id="@+id/dec_NavBck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="26dp"
        android:background="@color/theme_Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/dec_TitleBck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="26dp"
        android:background="@color/theme_Beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dec_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_Payment"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dec_TitleBck"
        app:layout_constraintEnd_toEndOf="@+id/dec_TitleBck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dec_TitleBck" />

    <TextView
        android:id="@+id/dec_CardNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="CARD NUMBER HERE"
        android:textAlignment="center"
        android:textColor="#07A31B"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dec_CardName" />

    <TextView
        android:id="@+id/dec_CardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="CARD NAME HERE"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dec_Card" />

    <Button
        android:id="@+id/navbtn_Home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/dec_TitleBck"
        app:layout_constraintEnd_toEndOf="@+id/dec_TitleBck"
        app:layout_constraintTop_toTopOf="@+id/dec_TitleBck" />

    <Button
        android:id="@+id/navbtn_MoveMoney"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/move_Money"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navbtn_AddMoney" />

    <Button
        android:id="@+id/navbtn_AddMoney"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/add_Money"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navbtn_Friends" />

    <Button
        android:id="@+id/navbtn_Friends"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/friends"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/navbtn_Pay"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_DarkBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/nfc_Pay"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navbtn_Friends" />

    <Button
        android:id="@+id/navbtn_Settings"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navbtn_Pay" />

    <Button
        android:id="@+id/btn_StartNFC"
        android:layout_width="216dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/theme_Orange"
        android:text="@string/start_NFC"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dec_Card" />

</androidx.constraintlayout.widget.ConstraintLayout>