<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08313a"
    tools:context=".MainHome">

    <Button
        android:id="@+id/navbtn_MoveMoney"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/move_Money"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navbtn_AddMoney" />

    <Button
        android:id="@+id/navbtn_AddMoney"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/add_Money"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navbtn_Friends" />

    <Button
        android:id="@+id/navbtn_Friends"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/friends"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/navbtn_Pay"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/nfc_Pay"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navbtn_Friends" />

    <Button
        android:id="@+id/navbtn_Settings"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/theme_LightBlue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navbtn_Pay" />

    <View
        android:id="@+id/dec_NavBck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="26dp"
        android:background="@color/theme_Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/dec_TitleBck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="26dp"
        android:background="@color/theme_Beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dec_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dec_TitleBck"
        app:layout_constraintEnd_toEndOf="@+id/dec_TitleBck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dec_TitleBck" />

    <View
        android:id="@+id/dec_RecBck"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="116dp"
        android:background="@color/theme_Beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dec_TitleBck"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/recbtn_LoadMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/theme_Orange"
        android:text="@string/load_More"
        android:textColor="@color/black"
        android:onClick="updateTransactionCard"
        app:layout_constraintBottom_toBottomOf="@+id/dec_RecBck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction_list"
        android:layout_width="381dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/recbtn_LoadMore"
        app:layout_constraintEnd_toEndOf="@+id/dec_RecBck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dec_RecBck" />

</androidx.constraintlayout.widget.ConstraintLayout>